--- a/examples/emm-notifications/google_settings.properties
+++ b/examples/emm-notifications/google_settings.properties
@@ -1,5 +1,12 @@
 # NOT PUBLIC
 # Values for our internal developer console project (enterprise-cloud-pub-sub)
-
 ServiceAccountEmail=368628613713-t4hf388f34tdn5lhpdcu1qqfgio01626@developer.gserviceaccount.com
+
+# Download from here: https://pantheon.corp.google.com/project/enterprise-cloud-pub-sub/apiui/credential
 ServiceAccountP12KeyFile=secret.p12
+ProjectName=enterprise-cloud-pub-sub
+SubscriptionName=projects/enterprise-cloud-pub-sub/subscriptions/push-subscription
+TopicName=projects/enterprise-cloud-pub-sub/topics/default-topic
+
+# Configured for the project mentioned above
+PushEndpoint=e.r-k.co
